
1.0.0 (2017-11-23)
------------------

:Breacking Changes:

- remove data value rescaling in `landsat8.tile` and `sentinel2.tile`

0.0.3 (2017-11-14)
------------------
- Fix Sentinel-2 bad AWS url

0.0.2 (2017-10-17)
------------------
- Fix python 2/3 compatibilities in rio_tiler.utils.landsat_get_mtl

0.0.1 (2017-10-05)
------------------
- Initial release. Requires Rasterio >= 1.0a10.